# ttf-raster

./: .gitignore  .gitmodule  .gitmodules  CMakeLists.txt  README.md  main.cpp
.cache/clangd/index/: gmock-actions.h.FFAD77B9BC5C4F86.idx  gmock-all.cc.7CE0AD24EAFFB3EC.idx  gmock-cardinalities.cc.630BEE86B3CC3D68.idx  gmock-cardinalities.h.602B1E9D82EC952C.idx  gmock-function-mocker.h.FFDA99FC8B613591.idx  gmock-generated-actions.h.075728E9E56AC36D.idx  gmock-internal-utils.cc.721C70507BEC38F8.idx  gmock-internal-utils.h.77AD60799A12A5C1.idx  gmock-matchers.cc.E0249D1A60B35A60.idx  gmock-matchers.h.693A9E3241E5D52C.idx  gmock-matchers.h.D7F22BDAFD08142E.idx  gmock-more-actions.h.621C2A65B2456623.idx  gmock-more-matchers.h.E34C41BCC43519CD.idx  gmock-nice-strict.h.0AF4850F1E3610FB.idx  gmock-port.h.91771819766956C4.idx  gmock-port.h.BF379780C53EB66A.idx  gmock-pp.h.77A8EF18DF11DB1A.idx  gmock-spec-builders.cc.9C53D6A6C7A158F2.idx  gmock-spec-builders.h.C556DD67B5AFC5BB.idx  gmock.cc.95C802441778B65A.idx  gmock.h.0D87DC719E4A4A17.idx  gmock_main.cc.53845A8431E5C0A6.idx  gtest-all.cc.F9DC25A60CA2FFC2.idx  gtest-assertion-result.cc.11AE70A67F685FE2.idx  gtest-assertion-result.h.AA506A2CDF7370C0.idx  gtest-death-test-internal.h.92EC8209FD98AF81.idx  gtest-death-test.cc.7B44705CF36CB67C.idx  gtest-death-test.h.53C773353AA7BD96.idx  gtest-filepath.cc.D4FB4B7A273567B2.idx  gtest-filepath.h.5DC10716CD7628E3.idx  gtest-internal-inl.h.4150262DE512BCBE.idx  gtest-internal.h.D198F60D18DF925C.idx  gtest-matchers.cc.E0659FC3BD16177D.idx  gtest-matchers.h.1D58DF543F33D21D.idx  gtest-message.h.11819BE7B7E0F8C1.idx  gtest-param-test.h.A23A89697BE55A58.idx  gtest-param-util.h.FE1799AEBA89FF24.idx  gtest-port-arch.h.3D5EE15F861E2BD8.idx  gtest-port.cc.AC21FBFE3CA50B5F.idx  gtest-port.h.4FBE63B972B13588.idx  (+18 more)
docs/: CMakeLists.txt
parser/: CMakeLists.txt
parser/head/parse/: tags.hh  types.hh  utils.hh
parser/head/parse/tables/: head.hh  sfnt.hh
parser/src/: table_offset.hh  types.hh  utils.hh
test/: CMakeLists.txt
